--- a/app/src/main/res/layout/layout_eventos.xml
+++ b/app/src/main/res/layout/layout_eventos.xml
@@ -3,23 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@drawable/degradado"
+    android:background="#feac00"
+    android:backgroundTint="#feac00"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_margin="3dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#feac00"
+        android:backgroundTint="#feac00">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:background="@color/colorAccent"
             android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:background="@color/colorPrimary"
                 android:layout_height="195dp">
 
                 <ImageView
@@ -31,14 +32,13 @@
 
                 <TextView
                     android:id="@+id/textoNuevoEvento"
-                    android:background="@color/colorAccent"
+                    android:background="#1C9603"
                     android:textSize="12sp"
                     android:padding="2dp"
                     android:width="80dp"
-                    android:fontFamily="@font/fonts"
-                    android:backgroundTint="@color/colorPrimaryDark"
                     android:textAlignment="center"
                     android:textColor="#ffffff"
+                    android:fontFamily="@font/fonts"
                     android:layout_marginTop="10dp"
                     android:text="Nuevo"
                     android:layout_width="wrap_content"
@@ -53,7 +53,7 @@
                     android:layout_margin="15dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:background="@color/colorAccent"
+                    android:background="#feac00"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
@@ -69,13 +69,14 @@
                         android:id="@+id/calificacionEvento"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/fonts"
                         android:layout_marginLeft="63dp"
-                        android:layout_toRightOf="@id/imagenCalificacionEvento"
+                        android:fontFamily="@font/fonts"
                         android:text="78%"
                         android:textColor="#ffffff"
                         android:textSize="17sp"
-                        android:textStyle="bold" />
+                        android:paddingRight="10dp"
+                        android:textStyle="bold"
+                        />
 
                     <TextView
                         android:id="@+id/calificacionesContadasEvento"
@@ -83,8 +84,8 @@
                         android:textSize="10sp"
                         android:layout_centerHorizontal="true"
                         android:layout_below="@id/calificacionEvento"
-                        android:fontFamily="@font/fonts"
                         android:textColor="@android:color/white"
+                        android:fontFamily="@font/fonts"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
@@ -96,7 +97,9 @@
             <RelativeLayout
                 android:padding="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="#fd9109"
+                android:backgroundTint="#fd9109">
 
                 <ImageView
                     android:id="@+id/fondo"
@@ -108,42 +111,46 @@
                     android:layout_marginLeft="-10dp"
                     android:layout_marginTop="0dp"
                     android:layout_marginRight="0dp"
-                    android:background="@color/colorAccent" />
+                    android:background="#feac00" />
 
                 <TextView
                     android:id="@+id/tituloEvento"
+                    android:paddingTop="5dp"
                     android:textSize="18sp"
-                    android:textColor="@color/colorblanco"
-                    android:fontFamily="@font/fonts"
+                    android:textColor="#FFFF"
                     android:text="Evento"
+                    android:paddingLeft="20dp"
+                    android:fontFamily="@font/fonts"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
                 <TextView
                     android:id="@+id/descripcionEvento"
                     android:layout_width="wrap_content"
-                    android:fontFamily="@font/fonts"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/colorblanco"
+                    android:textColor="#ffff"
+                    android:paddingLeft="20dp"
                     android:layout_below="@id/tituloEvento"
+                    android:fontFamily="@font/fonts"
                     android:layout_marginTop="0dp"
                     android:text="Descripcion" />
 
                 <Button
                     android:id="@+id/botonDetallesEvento"
-                    android:fontFamily="@font/fonts"
                     android:layout_alignParentRight="true"
                     android:text="Ver detalles"
+                    android:fontFamily="@font/fonts"
+                    android:textColor="#FFFF"
                     android:layout_centerVertical="true"
-                    android:backgroundTint="@color/colorPrimary"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_width="100dp"
+                    android:layout_height="35dp"
+                    android:background="@drawable/btndetalles"
+                    android:layout_marginRight="20dp"/>
 
             </RelativeLayout>
 
             <TextView
-                android:background="@color/colorblanco"
-                android:fontFamily="@font/fonts"
+                android:background="#414141"
                 android:layout_marginBottom="7dp"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"/>
