--- a/app/src/main/res/layout/activity_reservas.xml
+++ b/app/src/main/res/layout/activity_reservas.xml
@@ -54,7 +54,7 @@
     </ScrollView>
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/spLocalidad"
         android:layout_width="241dp"
         android:layout_height="44dp"
         android:layout_x="45dp"
