--- a/app/src/main/res/layout/activity_informacion_evento.xml
+++ b/app/src/main/res/layout/activity_informacion_evento.xml
@@ -105,8 +105,8 @@
                 android:background="@drawable/btndetalles"
                 android:fontFamily="@font/fonts"
                 android:text="Ver en Maps"
-                android:textSize="10dp"
-                android:textColor="@drawable/txtbtninicio" />
+                android:textColor="@drawable/txtbtninicio"
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/tituloEventoSeleccionado"
@@ -149,7 +149,7 @@
                 android:fontFamily="@font/fonts"
                 android:text="Reservar"
                 android:textColor="@drawable/txtbtninicio"
-                android:textSize="10dp" />
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/direccionEventoSeleccionado"
