--- a/app/src/main/res/layout/activity_reservas.xml
+++ b/app/src/main/res/layout/activity_reservas.xml
@@ -81,8 +81,8 @@
 
     <Button
         android:id="@+id/btnReserva"
-        android:layout_width="128dp"
-        android:layout_height="68dp"
+        android:layout_width="122dp"
+        android:layout_height="30dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
@@ -92,16 +92,16 @@
         android:layout_marginStart="29dp"
         android:layout_marginLeft="29dp"
         android:layout_marginTop="25dp"
-        android:layout_marginEnd="254dp"
-        android:layout_marginRight="254dp"
-        android:layout_marginBottom="140dp"
+        android:layout_marginEnd="260dp"
+        android:layout_marginRight="260dp"
+        android:layout_marginBottom="144dp"
         android:layout_x="67dp"
         android:layout_y="576dp"
         android:background="@drawable/btndetalles"
         android:fontFamily="@font/fonts"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Anular asientos seleccionados"
+        android:text="Anular asientos "
         android:textColor="@drawable/txtbtninicio" />
 
     <TextView
@@ -118,7 +118,9 @@
         android:layout_marginTop="54dp"
         android:layout_marginEnd="214dp"
         android:layout_marginRight="214dp"
-        android:text="TextView" />
+        android:fontFamily="@font/fonts"
+        android:text="TextView"
+        android:textColor="@color/colorblanco" />
 
     <TextView
         android:id="@+id/txtCantidadAsientos"
@@ -135,44 +137,54 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="218dp"
         android:layout_marginRight="218dp"
-        android:text="TextView" />
+        android:fontFamily="@font/fonts"
+        android:text="TextView"
+        android:textColor="@color/colorblanco" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="92dp"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="32dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="180dp"
-        android:layout_marginLeft="180dp"
-        android:layout_marginBottom="144dp"
-        android:text="Realizar Pago" />
+        android:layout_marginStart="249dp"
+        android:layout_marginLeft="249dp"
+        android:layout_marginBottom="142dp"
+        android:background="@drawable/btndetalles"
+        android:fontFamily="@font/fonts"
+        android:text="Realizar Pago"
+        android:textColor="@color/colorblanco" />
 
     <Button
         android:id="@+id/btnAnterior"
-        android:layout_width="101dp"
-        android:layout_height="37dp"
+        android:layout_width="119dp"
+        android:layout_height="32dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginBottom="212dp"
-        android:text="Anterior" />
+        android:layout_marginBottom="213dp"
+        android:background="@drawable/btndetalles"
+        android:fontFamily="@font/fonts"
+        android:text="Anterior"
+        android:textColor="@color/colorblanco" />
 
     <Button
         android:id="@+id/btnSiguiente"
-        android:layout_width="118dp"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="29dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="253dp"
-        android:layout_marginLeft="253dp"
-        android:layout_marginBottom="214dp"
-        android:text="Siguiente" />
+        android:layout_marginStart="250dp"
+        android:layout_marginLeft="250dp"
+        android:layout_marginBottom="216dp"
+        android:background="@drawable/btndetalles"
+        android:fontFamily="@font/fonts"
+        android:text="Siguiente"
+        android:textColor="@color/colorblanco" />
 
     <TextView
         android:id="@+id/txtPrecio"
@@ -181,10 +193,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginRight="21dp"
-        android:text="TextView" />
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:fontFamily="@font/fonts"
+        android:text="TextView"
+        android:textColor="@color/colorblanco" />
 
 
 </RelativeLayout>
